Fix vulnerable components lesson for Java 16.